--- a/src/pages/debug/debug.html
+++ b/src/pages/debug/debug.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bord" style="width:95%;height: ;">
-	
+
 	<div class="col">
 		<h1>API</h1>
 		<div id="out">XABLAU</div>
@@ -39,33 +39,39 @@
 					width: 100%;
 					justify-content: space-evenly;
 					">
-				
-				<input id="terminate_txtbx" 
-				class="in" 
-				placeholder="match id" 
-				style="
+
+				<input id="terminate_txtbx" class="in" placeholder="match id" style="
 					max-width: 120px;
 					margin-left: auto;
 					margin-right: auto;
-					"
-				> </input>
-				<button class="btn" 
-				style="
+					"> </input>
+				<button class="btn" style="
 					margin: 2px;
 					background-color: #aa0000;
 					color:#000000;
 					font-weight: bolder;
-					"
-				onclick="terminateFunc()"
-				>Terminate</button>
+					" onclick="terminateFunc()">Terminate</button>
 
 
 			</div>
-		
+
 
 
 		</div>
+		<div class="bord col" style="min-width: 200px; margin: 10px">
+			<h3 class="jg-title"> Start Match</h3>
+			<div class="row" style="
+					width: 100%;
+					justify-content: space-evenly;
+					">
+					<button class="btn" onclick="onStrtButton()">START</button>
 
+
+			</div>
+
+
+
+		</div>
 
 
 		<div class="bord col" style="min-width: 200px; margin: 10px">
@@ -74,23 +80,23 @@
 					width: 100%;
 					justify-content: space-evenly;
 					">
-				<div class="col" style="justify-content: center;"> 
-					
-					<div class="row"> 
+				<div class="col" style="justify-content: center;">
+
+					<div class="row">
 						<button class="jg" x style="margin: 15px;"> </button>
 						<button class="jg" o style="margin: 15px;"> </button>
 						<button class="jg" style="margin: 15px;"> </button>
-					</div> 
-					<div class="row"> 
+					</div>
+					<div class="row">
 						<button class="jg" style="margin: 15px;"> </button>
 						<button class="jg" style="margin: 15px;"> </button>
 						<button class="jg" style="margin: 15px;"> </button>
-					</div> 
-					<div class="row"> 
+					</div>
+					<div class="row">
 						<button class="jg" x style="margin: 15px;"> </button>
 						<button class="jg" o style="margin: 15px;"> </button>
 						<button class="jg" style="margin: 15px;"> </button>
-					</div> 
+					</div>
 				</div>
 
 
